--- a/target.html
+++ b/target.html
@@ -26,7 +26,9 @@
     <script>
         
         function ShowSplash(){
-            $('#splashscreen').fadeOut(3000);
+            setTimeout(() => {
+                $('#splashscreen').fadeOut(1000);
+            }, 1500);
         }
         
         // $('.enter_link').click(function () {
